force-app/main/default/objects/health_changed__e.object
<CustomObject>
    <label>Health Changed</label>
    <pluralLabel>Health Changed</pluralLabel>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Score__c</fullName>
        <label>New Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Score__c</fullName>
        <label>Old Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>